[gd_scene load_steps=6 format=3 uid="uid://cx7x0f3lh4aus"]

[ext_resource type="Script" uid="uid://cm1p2ejcm3mg4" path="res://scripts/virtual_controller.gd" id="1_c4rma"]
[ext_resource type="PackedScene" uid="uid://c5lir3jkw3qk" path="res://scenes/virtual_buttons_bottom_left.tscn" id="3_ek3oe"]
[ext_resource type="PackedScene" uid="uid://d1yeyb0luu5cy" path="res://scenes/virtual_buttons_bottom_right.tscn" id="4_4a2ha"]
[ext_resource type="PackedScene" uid="uid://clp3r7jjx7lg6" path="res://scenes/virtual_buttons_top_left.tscn" id="5_g6s7q"]
[ext_resource type="PackedScene" uid="uid://gpoak7bsf1wf" path="res://scenes/virtual_buttons_top_right.tscn" id="6_jtalx"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="VirtualController3D" type="Node2D" parent="."]
script = ExtResource("1_c4rma")

[node name="VirtualButtonsBottomLeft" parent="." instance=ExtResource("3_ek3oe")]
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
grow_horizontal = 1
grow_vertical = 0

[node name="VirtualButtonsBottomRight" parent="." instance=ExtResource("4_4a2ha")]
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VirtualButtonsTopLeft" parent="." instance=ExtResource("5_g6s7q")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="VirtualButtonsTopRight" parent="." instance=ExtResource("6_jtalx")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
grow_horizontal = 0
grow_vertical = 1
